# fennel-solonet

./: .dockerignore  .gitignore  .yamllint  CI_IMPROVEMENTS.md  Cargo.toml  Containerfile  DEPLOYMENT_GUIDE.md  DEVSPACE.code-workspace  Dockerfile  Dockerfile.backup-with-genesis-issues  Dockerfile.simplified  EXTERNAL_VALIDATOR_SETUP.md  GPG-SETUP-COMPLETE.md  GRANDPA_FIX_SUMMARY.md  Makefile  PRODUCTION_SECRETS_SETUP.md  README.md  RELEASE_PROCESS.md  cargo_check_output.txt  chain-init.sh  create-release-tag.sh  derive-public-keys.sh  fennelSpec.json  fennelSpecRaw.json  fennelSpecRaw.json.backup  fix-bootnode-connectivity-parity.sh  index.html  index.yaml  local-init.sh  parity-bootnode-fix.sh  peer-1-init.sh  peer-2-init.sh  rust-toolchain.toml  test-bootnode-injection.sh  test-docker.sh  test-enhanced-cicd.sh  test-production-build.sh
.devcontainer/: devcontainer.json
.github/: release-signing.pub.asc
.github/workflows/: check.yml  ci.yml  publish.yml  release.yml  test-bootnodes.yml  test.yml
Charts/fennel-node/: Chart.yaml  README.md  values-staging.yaml  values.yaml
Charts/fennel-node/charts/: node-0.10.0.tgz  node-5.15.0.tgz
Charts/fennel-node/examples/: test-values.yaml
Charts/fennel-node/templates/: _helpers.tpl  service-api.yaml  service-p2p.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
NOTES/: notes.md
chainspecs/development/: development-raw.json  development.json
chainspecs/production/: README.md  production-chainspec.json  production-raw.json
chainspecs/staging/: chain_spec-raw.json  chain_spec.json  staging-chainspec.json  staging-raw.json
docs/: CRYPTOGRAPHIC-VERSION-UNITY.md  ENHANCED-CICD.md  UPGRADE-QUICKREF.md  VALIDATION-GUIDE.md  VALIDATORS_SETUP_TESTNET_FENNELSOLONET.md  genesis-configuration.md  helmrelease-staging-v0.2.0.yaml  staging-deployment-guide.md
kubernetes/: DEPLOYMENT_SUMMARY.md  EXTERNAL_VALIDATOR_GUIDE.md  README.md  TESTING_STRATEGY.md  VALIDATOR_MANAGEMENT_WORKFLOW.md  add-validator-quick-guide.md  bootnode-values.yaml  check-deployment.sh  create-chainspec-secret.sh  deploy-bootnodes-fixed.sh  deploy-bootnodes-remote.sh  deploy-bootnodes.sh  deploy-fennel.sh  deploy-phases.sh  deploy.sh  fennel-chainspec-configmap.yaml  fennel-values.yaml  fennelSpec-dev-raw.json  fennelSpec-local-raw.json.backup  fennelSpec-local.json.backup  fennelSpec-network-with-validators.json  local-development-guide.md  maintain-port-forwards.sh  secrets.yaml  setup-k3s.sh  test-bootnode-connectivity.sh  test-charlie-dave-eve-final.sh  test-charlie-dave-eve-fixed.sh  test-charlie-dave-eve-production.sh  test-charlie-dave-eve-v2.sh  test-charlie-dave-eve.sh  test-external-validators.sh  validator-management.md  validator-setup-k8s.md  values-chain.yaml  values-peer.yaml
kubernetes/manifests/: bootnode-static-keys-secret.yaml  network-policy.yaml  pod-disruption-budget.yaml
kubernetes/values/: bootnodes.yaml  bootstrap.yaml  scale-2.yaml  testing.yaml  values-base.yaml
node/: Cargo.toml  validator-setup-guidenew.md
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/certificate/: Cargo.toml
pallets/certificate/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/identity/: Cargo.toml
pallets/identity/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/infostratus/: Cargo.toml
pallets/infostratus/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/keystore/: Cargo.toml
pallets/keystore/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/signal/: Cargo.toml
pallets/signal/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/trust/: Cargo.toml
pallets/trust/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/validator-manager/: Cargo.toml  README.md
pallets/validator-manager/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
release/: fennel-node-0.1.0.tgz  fennel-node-0.2.0.tgz  fennel-node-0.3.1.tgz
runtime/: Cargo.toml
runtime/fennel/: Cargo.toml  build.rs
runtime/fennel/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs  validator_manager.rs
runtime/fennel/src/configs/: mod.rs
runtime/fennel/src/weights/: pallet_identity.rs  pallet_signal.rs  pallet_sudo.rs  pallet_trust.rs  pallet_validator_manager.rs
runtime/src/: lib.rs
runtime/src/weights/: pallet_balances.rs  pallet_certificate.rs  pallet_identity.rs  pallet_infostratus.rs  pallet_signal.rs  pallet_trust.rs
scripts/: fix-gh-pages.sh  local-k3d-setup.sh  package-chart.sh  run-benchmarks.sh  run_alice.sh  run_all_benchmarks.sh  run_bob.sh  run_charlie.sh  run_dave.sh  run_eve.sh  staging-external-setup.sh  test-chart.sh  test-helm-chart.sh  test-staging-build.sh  validate-chart.sh
scripts/Bootnodes/: bootnode1.key  bootnode1_peer_id.txt  bootnode2.key  bootnode2_peer_id.txt  quick-bootnode-setup.sh
