[package]
authors = ["Fennel Labs <https://github.com/fennelLabs>"]
description = "FRAME pallet providing Fennel certificate logic."
edition = "2021"
homepage = "https://fennellabs.com"
license = "Unlicense"
name = "pallet-certificate"
publish = false
readme = "README.md"
repository = "https://github.com/fennelLabs/fennel-protocol/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking", 
  "frame-support/runtime-benchmarks", 
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks"
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking?/std",
  "scale-info/std",
  "pallet-balances/std"
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
