[package]
name = "pallet-validator-manager"
description = "A pallet for managing validators through a privileged origin."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
pallet-balances = { workspace = true, features = ["std"] }
sp-core = { workspace = true }
num-traits = "0.2"
# parity-scale-codec = { version = "3.7", features = ["derive"] }
# sp-io is now used via frame_support::sp_io

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-session/std",
    "scale-info/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-core/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks"
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]